[package]
name = "web_parser_rust"
version = "1.0.0"
authors = ["rummolprod999 <rummolprod999@gmail.com>"]

[dependencies]
clap = "*"
reqwest = "*"
chrono = "0.3.0"
log4rs = "*"
log = "*"
serde = "*"
serde_json = "*"
serde_derive = "*"
select = "*"
regex = "*"
mysql = "11.3.1"
mysql_common = "*"
uuid = { version = "0.6.5", features = ["serde", "v4"] }