[package]
name = "web_parser_rust"
version = "1.13.0"
authors = ["rummolprod999 <rummolprod999@gmail.com>"]
edition = "2018"

[dependencies]
clap = "2.32.0"
reqwest = "0.9.5"
chrono = "0.3.0"
log4rs = "0.8.1"
log = "0.4.6"
serde = "1.0.80"
serde_json = "1.0.33"
serde_derive = "1.0.80"
select = "0.4.2"
regex = "1.1.0"
mysql = "11.3.1"
mysql_common = "0.10.0"
md5 = "0.6.0"
uuid = { version = "0.6.5", features = ["serde", "v4"] }